--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-start mb-5">
-        <a href="/about" class="btn btn-info text-white" style="position: relative; left: 0; bottom: 0;">
+        <a href="/views/about" class="btn btn-info text-white" style="position: relative; left: 0; bottom: 0;">
           About Us
         </a>
       </div>
