--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,19 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%= title %> - Admin Dashboard</title>
 
-  <!-- Updated Bootstrap CSS to the latest version -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <!-- Custom CSS (if you have any additional styling) -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body class="bg-light">
 
-  <!-- Header (adjust as necessary) -->
+  <!-- Header -->
   <%- include('templates/header') %>
 
   <div class="container my-5">
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <!-- Footer (adjust as necessary) -->
+  <!-- Footer -->
   <%- include('templates/footer') %>
 
   <!-- Bootstrap JS -->
