--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -13,7 +13,7 @@
           <a class="nav-link" href="/" style="color: #FFFFFF;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/views/about" style="color: #FFFFFF;">About</a>
+          <a class="nav-link" href="/about" style="color: #FFFFFF;">About</a>
         </li>
 
         <% if (user) { %>
