--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -21,7 +21,7 @@
             <a class="nav-link" href="/profile" style="color: #FFFFFF;">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/main" style="color: #FFFFFF;">Main</a>
+            <a class="nav-link" href="/polls" style="color: #FFFFFF;">Main</a>
           </li>
           <% if (user.user_type === 'admin') { %>
             <li class="nav-item">
