--- a/views/templates/poll.ejs
+++ b/views/templates/poll.ejs
@@ -1,11 +1,28 @@
-<div class="card mb-4" style="background-color: #FFFFFF; border: 2px solid #60A5FA;">
-    <div class="card-body">
-      <h5 class="card-title text-primary"><%= poll.title %></h5>
-      <div class="mt-3 d-flex flex-wrap gap-2">
-        <% let i=0; %>
-		    <% for(i=0; i < poll.tags.length; i++) { %>
-        <span class="badge bg-warning text-dark"><%= poll.tags[i].text %></span>
-        <% } %> 
+<div class="poll-container">
+<!-- Linking bootstrap classes for styling and the star icon -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
+  <div class="card mb-4" style="background-color: #FFFFFF; border: 2px solid #60A5FA;">
+    <div class="card-body d-flex justify-content-between align-items-start">
+      <div>
+        <h5 class="card-title text-primary"><%= poll.title %></h5>
+        <div class="mt-3 d-flex flex-wrap gap-2">
+          <% let i=0; %>
+          <% for(i=0; i < poll.tags.length; i++) { %>
+          <span class="badge bg-warning text-dark"><%= poll.tags[i].text %></span>
+          <% } %>
+        </div>
+      </div>
+      <div>
+        <!-- The start button to toggle if a poll is saved or not saved -->
+         <!-- If the poll is saved in the user's profile page it will be filled in -->
+          <!-- displays an animation when mouse is hovering over it -->
+           <!-- Default state is set to be unfilled -->
+        <button class="btn btn-outline-warning btn-sm save-toggle-btn" data-poll-id="<%= poll._id %>" data-saved="false">
+          <i class="bi bi-star"></i>
+        </button>
       </div>
     </div>
-</div>
+  </div>
